乱メモ1乱メモ2への初期化を追加。初回起動時のページを乱屍、乱メモ1、乱メモ2に変更

--- a/RanCyan/RanCyan/Views/LotteryConfigPage.xaml
+++ b/RanCyan/RanCyan/Views/LotteryConfigPage.xaml
@@ -39,7 +39,11 @@
         </TableSection>
         <TableSection Title="初期化">
           <ViewCell>
-            <Button Text="乱屍" Command="{Binding ChangeRanshikaCommand}" />
+            <StackLayout>
+              <Button Text="乱屍" Command="{Binding ChangeRanshikaCommand}" />
+              <Button Text="乱メモ1" Command="{Binding ChangeRanmemo1Command}" />
+              <Button Text="乱メモ2" Command="{Binding ChangeRanmemo2Command}" />
+            </StackLayout>
           </ViewCell>
         </TableSection>
       </TableRoot>
