--- a/RanCyan/RanCyan/Views/LotteryConfigCategoryModelSettingView.xaml
+++ b/RanCyan/RanCyan/Views/LotteryConfigCategoryModelSettingView.xaml
@@ -8,7 +8,14 @@
   <Grid>
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="*" />
-      <ColumnDefinition Width="80" />
+      <ColumnDefinition>
+        <ColumnDefinition.Width>
+          <OnPlatform x:TypeArguments="GridLength">
+            <On Platform="Android">40</On>
+            <On Platform="UWP">80</On>
+          </OnPlatform>
+        </ColumnDefinition.Width>
+      </ColumnDefinition>
       <ColumnDefinition Width="80" />
       <ColumnDefinition Width="40" />
       <ColumnDefinition Width="40" />
