--- a/RanCyan/RanCyan/Views/LotteryConfigPage.xaml
+++ b/RanCyan/RanCyan/Views/LotteryConfigPage.xaml
@@ -39,11 +39,13 @@
         </TableSection>
         <TableSection Title="初期化">
           <ViewCell>
-            <StackLayout>
-              <Button Grid.Row="0" Text="乱屍" Command="{Binding ChangeRanshikaCommand}" />
-              <Button Grid.Row="1" Text="乱メモ1" Command="{Binding ChangeRanmemo1Command}" />
-              <Button Grid.Row="2" Text="乱メモ2" Command="{Binding ChangeRanmemo2Command}" />
-            </StackLayout>
+            <Button Text="乱屍" Command="{Binding ChangeRanshikaCommand}" />
+          </ViewCell>
+          <ViewCell>
+            <Button Text="乱メモ1" Command="{Binding ChangeRanmemo1Command}" />
+          </ViewCell>
+          <ViewCell>
+            <Button Text="乱メモ2" Command="{Binding ChangeRanmemo2Command}" />
           </ViewCell>
         </TableSection>
       </TableRoot>
@@ -66,7 +68,14 @@
                   </OnPlatform>
                 </ColumnDefinition.Width>
               </ColumnDefinition>
-              <ColumnDefinition Width="80" />
+              <ColumnDefinition>
+                <ColumnDefinition.Width>
+                  <OnPlatform x:TypeArguments="GridLength">
+                    <On Platform="Android">60</On>
+                    <On Platform="UWP">80</On>
+                  </OnPlatform>
+                </ColumnDefinition.Width>
+              </ColumnDefinition>
               <ColumnDefinition Width="40" />
               <ColumnDefinition Width="40" />
               <ColumnDefinition Width="60" />
