--- a/RanCyan/RanCyan/Views/LotteryMobilePage.xaml
+++ b/RanCyan/RanCyan/Views/LotteryMobilePage.xaml
@@ -2,7 +2,6 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="http://prismlibrary.com"
-             xmlns:cv="clr-namespace:RanCyan.Converters"
              xmlns:local="clr-namespace:RanCyan.TriggerActions"
              xmlns:views="clr-namespace:RanCyan.Views"
              prism:ViewModelLocator.AutowireViewModel="True"
@@ -12,7 +11,6 @@
 
   <ContentPage.Resources>
     <ResourceDictionary>
-      <cv:ImageSourceConverter x:Key="ImageSourceConverter"/>
       <Style x:Key="LabelStyle" TargetType="Label">
         <Setter Property="VerticalOptions" Value="CenterAndExpand"/>
         <Setter Property="HorizontalTextAlignment" Value="Center"/>
@@ -38,7 +36,7 @@
              Grid.RowSpan="2"
              Aspect = "AspectFit" 
              VerticalOptions ="End"
-             Source="{Binding RanCyanImage.Value, Converter={StaticResource ImageSourceConverter}}">
+             Source="{Binding RanCyanImage.Value}" >
         <Image.Triggers>
           <DataTrigger TargetType="Image" Binding="{Binding IsImageActive.Value}" Value="True">
             <DataTrigger.EnterActions>
