--- a/RanCyan/RanCyan/Views/LotteryMobilePage.xaml
+++ b/RanCyan/RanCyan/Views/LotteryMobilePage.xaml
@@ -1,15 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="http://prismlibrary.com"
              xmlns:local="clr-namespace:RanCyan.TriggerActions"
-             xmlns:views="clr-namespace:RanCyan.Views"
-             prism:ViewModelLocator.AutowireViewModel="True"
+             xmlns:views="clr-namespace:RanCyan.Views" xmlns:ff="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
+            prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="RanCyan.Views.LotteryMobilePage"
-             x:Name="this"
+             x:Name="Base"
              Title="{Binding Title.Value}">
 
-  <ContentPage.Resources>
+  <TabbedPage.Resources>
     <ResourceDictionary>
       <Style x:Key="LabelStyle" TargetType="Label">
         <Setter Property="VerticalOptions" Value="CenterAndExpand"/>
@@ -23,53 +23,80 @@
         <Setter Property="BackgroundColor" Value="White"/>
       </Style>
     </ResourceDictionary>
-  </ContentPage.Resources>
+  </TabbedPage.Resources>
 
-  <Grid>
-    <Grid Grid.Column="0">
+  <TabbedPage Title="個別抽選" ItemsSource="{Binding LotteryCategorySelectionViewModels}">
+    <TabbedPage.ItemTemplate>
+      <DataTemplate>
+        <ContentPage Title="{Binding CategoryTitle.Value}" >
+          <Grid>
+            <Grid.RowDefinitions>
+              <RowDefinition Height="*"/>
+              <RowDefinition Height="4*"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+              <ColumnDefinition Width="3*"/>
+              <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <BoxView Grid.RowSpan="2" Grid.ColumnSpan="2" BackgroundColor="{Binding BindingContext.BackgroundColor.Value, Source={x:Reference Base}}"/>
+            <Label Grid.Row="0" 
+                   Style="{StaticResource LabelStyle}"
+                   Text="{Binding LotteryLabelModel.Value.Text}" 
+                   TextColor="{Binding LotteryLabelModel.Value.Color}" />
+            <ff:CachedImage Grid.Row="0" 
+                   Grid.RowSpan="2"
+                   Aspect = "AspectFit" 
+                   VerticalOptions ="End"
+                   Source="resource://RanCyan.Images.MiniMikoRanCyan.png" >
+              <ff:CachedImage.GestureRecognizers>
+                <TapGestureRecognizer Command="{Binding ToDrawCommand}" />
+              </ff:CachedImage.GestureRecognizers>
+            </ff:CachedImage>
+            <views:LotteryCategorySelectionView Grid.Column="1" Grid.RowSpan="2" BindingContext="{Binding}"/>
+          </Grid>
+        </ContentPage>
+      </DataTemplate>
+    </TabbedPage.ItemTemplate>
+  </TabbedPage>
+
+  <ContentPage Title="全体抽選・設定">
+    <Grid>
       <Grid.RowDefinitions>
-        <RowDefinition Height="*"/>
         <RowDefinition Height="4*"/>
+        <RowDefinition Height="4*"/>
+        <RowDefinition Height="*"/>
       </Grid.RowDefinitions>
-      <!-- 乱ちゃんの3Dgif画像 -->
-      <Image Grid.Row="0" 
-             Grid.RowSpan="2"
+      <!-- 抽選結果(オール) -->
+      <BoxView Grid.RowSpan="3" BackgroundColor="{Binding BindingContext.BackgroundColor.Value, Source={x:Reference Base}}"/>
+      <ListView Grid.Row="0"
+                ItemsSource="{Binding LotteryCategoryModels}"
+                IsVisible="{Binding IsAllToDraw.Value}"
+                SelectionMode="None">
+        <ListView.ItemTemplate>
+          <DataTemplate>
+            <ViewCell>
+              <Grid>
+                <Label FontSize="16"
+                       Text="{Binding Title}" 
+                       TextColor="{Binding LotteryLabelModel.Color}" />
+                <Label Style="{StaticResource LabelStyle}"
+                       Text="{Binding LotteryLabelModel.Text}" 
+                       TextColor="{Binding LotteryLabelModel.Color}" />
+              </Grid>
+            </ViewCell>
+          </DataTemplate>
+        </ListView.ItemTemplate>
+      </ListView>
+      <ff:CachedImage Grid.Row="1"
              Aspect = "AspectFit" 
              VerticalOptions ="End"
-             Source="{Binding RanCyanImage.Value}" >
-        <Image.Triggers>
-          <DataTrigger TargetType="Image" Binding="{Binding IsImageActive.Value}" Value="True">
-            <DataTrigger.EnterActions>
-              <local:MoveTriggerAction IsActive="True" />
-            </DataTrigger.EnterActions>
-            <DataTrigger.ExitActions>
-              <local:MoveTriggerAction IsActive="False" />
-            </DataTrigger.ExitActions>
-          </DataTrigger>
-        </Image.Triggers>
-      </Image>
-    </Grid>
-    <Grid Grid.Column="0" Opacity="0.5">
-      <Grid.RowDefinitions>
-        <RowDefinition Height="8*"/>
-        <RowDefinition Height="*"/>
-      </Grid.RowDefinitions>
-      <!-- 除外選択リストと抽選ボタン -->
-      <CollectionView Grid.Row="0"
-                      ItemsSource="{Binding LotteryCategorySelectionViewModels}"
-                      ItemsLayout="HorizontalList">
-        <CollectionView.ItemTemplate>
-          <DataTemplate>
-            <Grid VerticalOptions="FillAndExpand">
-              <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="80" />
-              </Grid.ColumnDefinitions>
-              <views:LotteryCategorySelectionView BindingContext="{Binding}"/>
-            </Grid>
-          </DataTemplate>
-        </CollectionView.ItemTemplate>
-      </CollectionView>
-      <Grid Grid.Row="1">
+             Source="resource://RanCyan.Images.MiniKowashiyaRanCyan.png" >
+        <ff:CachedImage.GestureRecognizers>
+          <TapGestureRecognizer
+            Command="{Binding AllToDrawCommand}" />
+        </ff:CachedImage.GestureRecognizers>
+      </ff:CachedImage>
+      <Grid  Grid.Row="2">
         <Grid.ColumnDefinitions>
           <ColumnDefinition Width="*" />
           <ColumnDefinition Width="*" />
@@ -78,5 +105,7 @@
         <Button Grid.Column="1" Text="Config" Command="{Binding ConfigPageNavigationCommand}"/>
       </Grid>
     </Grid>
-  </Grid>
-</ContentPage>
+  </ContentPage>
+
+
+</TabbedPage>
