--- a/RanCyan/RanCyan/Views/LotteryMobilePage.xaml
+++ b/RanCyan/RanCyan/Views/LotteryMobilePage.xaml
@@ -2,9 +2,9 @@
 <TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="http://prismlibrary.com"
-             xmlns:local="clr-namespace:RanCyan.TriggerActions"
-             xmlns:views="clr-namespace:RanCyan.Views" xmlns:ff="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
-            prism:ViewModelLocator.AutowireViewModel="True"
+             xmlns:views="clr-namespace:RanCyan.Views" 
+             xmlns:ff="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
+             prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="RanCyan.Views.LotteryMobilePage"
              x:Name="Base"
              Title="{Binding Title.Value}">
