--- a/RanCyan/RanCyan/Views/LotteryUwpPage.xaml
+++ b/RanCyan/RanCyan/Views/LotteryUwpPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="http://prismlibrary.com"
              xmlns:views="clr-namespace:RanCyan.Views"
-             xmlns:cv="clr-namespace:RanCyan.Converters"
+             xmlns:windows="clr-namespace:Xamarin.Forms.PlatformConfiguration.WindowsSpecific;assembly=Xamarin.Forms.Core"
              xmlns:local="clr-namespace:RanCyan.TriggerActions"
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="RanCyan.Views.LotteryUwpPage"
@@ -108,8 +108,8 @@
           <ColumnDefinition Width="*" />
           <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-        <Button Grid.Column="0" Text="全抽選" Command="{Binding AllToDrawCommand}"/>
-        <Button Grid.Column="1" Text="Config" Command="{Binding ConfigPageNavigationCommand}"/>
+        <Button Grid.Column="0" Text="全抽選" Command="{Binding AllToDrawCommand}" windows:VisualElement.AccessKey="A"/>
+        <Button Grid.Column="1" Text="Config" Command="{Binding ConfigPageNavigationCommand}" windows:VisualElement.AccessKey="C"/>
       </Grid>
     </Grid>
   </Grid>
