--- a/RanCyan/RanCyan/Views/LotteryUwpPage.xaml
+++ b/RanCyan/RanCyan/Views/LotteryUwpPage.xaml
@@ -1,14 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:prism="http://prismlibrary.com"
-             xmlns:views="clr-namespace:RanCyan.Views"
-             xmlns:windows="clr-namespace:Xamarin.Forms.PlatformConfiguration.WindowsSpecific;assembly=Xamarin.Forms.Core"
-             xmlns:local="clr-namespace:RanCyan.TriggerActions"
-             prism:ViewModelLocator.AutowireViewModel="True"
-             x:Class="RanCyan.Views.LotteryUwpPage"
-             x:Name="this"
-             Title="{Binding Title.Value}">
+<renderers:KeyDownContentPage
+  xmlns:renderers="clr-namespace:RanCyan.Renderers"
+  xmlns="http://xamarin.com/schemas/2014/forms"
+  xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+  xmlns:prism="http://prismlibrary.com"
+  xmlns:views="clr-namespace:RanCyan.Views"
+  xmlns:windows="clr-namespace:Xamarin.Forms.PlatformConfiguration.WindowsSpecific;assembly=Xamarin.Forms.Core"
+  xmlns:local="clr-namespace:RanCyan.TriggerActions"
+  prism:ViewModelLocator.AutowireViewModel="True"
+  x:Class="RanCyan.Views.LotteryUwpPage"
+  x:Name="this"
+  Title="{Binding Title.Value}"
+  DownKey="{Binding DownKey.Value}">
 
   <ContentPage.Resources>
     <ResourceDictionary>
@@ -114,4 +117,4 @@
     </Grid>
   </Grid>
 
-</ContentPage>
+</renderers:KeyDownContentPage>
