抽選回数を表示

--- a/RanCyan/RanCyan/Views/LotteryMobilePage.xaml
+++ b/RanCyan/RanCyan/Views/LotteryMobilePage.xaml
@@ -39,10 +39,6 @@
               <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <BoxView Grid.RowSpan="2" Grid.ColumnSpan="2" BackgroundColor="{Binding BindingContext.BackgroundColor.Value, Source={x:Reference Base}}"/>
-            <!--<Label Grid.Row="0" 
-                   Style="{StaticResource LabelStyle}"
-                   Text="{Binding LotteryLabelModel.Value.Text}" 
-                   TextColor="{Binding LotteryLabelModel.Value.Color}" />-->
             <ListView Grid.Row="0" 
                 ItemsSource="{Binding LotteryLabelModels}"
                 SelectionMode="None">
@@ -50,9 +46,9 @@
                 <DataTemplate>
                   <ViewCell>
                     <Grid>
-                      <!--<Label FontSize="16"
-                       Text="{Binding Title}" 
-                       TextColor="{Binding LotteryLabelModel.Color}" />-->
+                      <Label FontSize="16"
+                       Text="{Binding Number,StringFormat='{0}回目'}" 
+                       TextColor="{Binding Color}" />
                       <Label Style="{StaticResource LabelStyle}"
                        Text="{Binding Text}" 
                        TextColor="{Binding Color}" />
