--- a/RanCyan/RanCyan/Views/LotteryUwpPage.xaml
+++ b/RanCyan/RanCyan/Views/LotteryUwpPage.xaml
@@ -60,13 +60,6 @@
           </DataTrigger>
         </Image.Triggers>
       </Image>
-      <!-- 抽選結果(シングル) -->
-      <!--<Label Grid.Row="0" 
-             Style="{StaticResource LabelStyle}"
-             Text="{Binding LotteryCategorySelectedModel.Value.LotteryLabelModel.Text}" 
-             TextColor="{Binding LotteryCategorySelectedModel.Value.LotteryLabelModel.Color}" 
-             IsVisible="{Binding IsNotAllToDraw.Value}">
-      </Label>-->
       <!-- 抽選結果(シングル複数回) -->
       <ListView Grid.Row="0" 
                 Grid.RowSpan="2"
@@ -77,9 +70,9 @@
           <DataTemplate>
             <ViewCell>
               <Grid>
-                <!--<Label FontSize="16"
-                       Text="{Binding Title}" 
-                       TextColor="{Binding LotteryLabelModel.Color}" />-->
+                <Label FontSize="16"
+                       Text="{Binding Number,StringFormat='{0}回目'}" 
+                       TextColor="{Binding Color}" />
                 <Label Style="{StaticResource LabelStyle}"
                        Text="{Binding Text}" 
                        TextColor="{Binding Color}" />
